# hive_ui

./: .cursorrules  .env.example  .firebaserc  .gitignore  HIVE_OVERVIEW.md  HIVE_UI_LAUNCH_CHECKLIST.md  HIVE_UI_UX_DESIGN_PLAN.md  README.md  analysis_options.yaml  cursor_arch.mdc  cursor_rules_dialog_implementation.mdc  cursor_rules_dialog_parameters.mdc  cursor_rules_hive_memory_bank.mdc  cursor_rules_hive_ui_architecture.mdc  cursor_rules_hive_ui_clean_code.mdc  cursor_rules_hive_ui_error_handling.mdc  cursor_rules_hive_ui_flutter_syntax.mdc  cursor_rules_hive_ui_layout_performance.mdc  cursor_rules_hive_ui_state_management.mdc  database.rules.json  e_database  event_lifecycle_integration_proposal.md  firebase.json  firebase_implementation_plan.md  firestore.indexes.json  firestore.mdc  firestore.rules  firestore_rules.txt  fix.txt  fix_spaces.bat  fix_spaces.sh  foundline.txt  function_fixes.txt  hive_event_differentiation.md  hive_platform_user_journey.md  main_backup.dart  main_feed_redesign.md  package-lock.json  package.json  plugin_version.h.in  (+14 more)
.config/: tsconfig.json
.firebase/: hosting.YnVpbGRcd2Vi.cache  hosting.bGFuZGluZy1wYWdlXG91dA.cache
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android_backup/: gradle.properties
backend/: firebase.json  firestore.rules
coverage/: lcov.info
dataconnect/: dataconnect.yaml
dataconnect-generated/: README.md
docs/: AUTHENTICATION_AUDIT_RESULTS.md  DEVELOPMENT_SETUP.md  HIVE_AUTH_ONBOARDING_AUDIT.md  HIVE_COLOR_SYSTEM_UPDATE_SUMMARY.md  HIVE_PRD.md  HIVE_TYPOGRAPHY_SYSTEM_IMPLEMENTATION.md  HIVE_UI_UX_DESIGN_PLAN.md  HIVE_vBETA_BUILD_REQUIREMENTS.md  HIVE_vBETA_CLEANUP_SUMMARY.md  HIVE_vBETA_COMPONENT_BREAKDOWN.md  HIVE_vBETA_COMPONENT_PRIORITIES.md  HIVE_vBETA_DEVELOPMENT_TIMELINE.md  README.md  (+37 more)
flutter/ephemeral/.plugin_symlinks/firebase_core/windows/: CMakeLists.txt  CMakeLists.txt.syntax_backup  firebase_core_plugin.cpp  firebase_core_plugin.cpp.syntax_backup
flutter/ephemeral/.plugin_symlinks/firebase_core/windows/firebase_core/: plugin_version.h
(+2215 files in other folders)
